--- a/packages/frontend/src/rsvp/RsvpFull.module.css
+++ b/packages/frontend/src/rsvp/RsvpFull.module.css
@@ -1,27 +1,10 @@
 .page {
   width: 100%;
-  background-color: white;
   min-height: 100dvh;
-}
-
-.background::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100dvh;
-  background-image: url('/background.jpg');
-  background-size: cover;
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  z-index: 0;
-  pointer-events: none;
 }
 
 .content {
   position: relative;
-  z-index: 1;
   max-width: 720px;
   margin: 0 auto;
   padding: 60px 25px 80px;
